--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,6 +1,2 @@
-<div style="text-align: center;">
-<h1>
-  Bonjour
-</h1>
-<app-value></app-value>
-</div>
+<app-navbar></app-navbar>
+<app-home></app-home>
