Section 6: utilisation de bootstrap, et jwt

--- a/DatingApp-SPA/src/app/navbar/navbar.component.html
+++ b/DatingApp-SPA/src/app/navbar/navbar.component.html
@@ -1,7 +1,8 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">App Dating</a>
+<nav class="navbar navbar-expand-md navbar-dark bg-primary">
+  <div class="container">
+    <a class="navbar-brand" href="#">App Dating</a>
 
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav mr-auto" *ngIf="loggedIn()">
       <li class="nav-item active">
         <a class="nav-link" href="#">Matches</a>
       </li>
@@ -11,20 +12,17 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Messages</a>
       </li>
-      <li *ngIf="loggedIn()" class="nav-item">
-        <a class="nav-link" (click) = 'logOut()'>Deconnexion</a>
-      </li>
     </ul>
 
-    <div *ngIf="loggedIn()" class="dropdown">
-      <a class="dropdown-toggle text-light">
-        Bonjour
+    <div *ngIf="loggedIn()" class="dropdown" dropdown>
+      <a class="dropdown-toggle text-light" dropdownToggle>
+        Bonjour {{authService.decryptedToken.unique_name | titlecase}}
       </a>
     
-      <div class="dropdown-menu" >
+      <div class="dropdown-menu mt-3" *dropdownMenu>
         <a class="dropdown-item" href="#">Modifier mon profil</a>
         <div class="dropdow-divider"></div>
-        <a class="dropdown-item" href="#">Deconnexion</a>
+        <a class="dropdown-item" (click) = 'logOut()'>Deconnexion</a>
       </div>
     </div>
 
@@ -33,4 +31,7 @@
       <input class="form-control mr-sm-2" type="password" name="password" placeholder="Mot de passe" required [(ngModel)]="model.password"> 
       <button class="btn btn-outline-success my-2 my-sm-0" [disabled]='!FormLogin.valid' type="submit">Se connecter</button>
     </form>
+
+  </div>
+  
 </nav>
